archived-reference/3.0/CimCmdlets/Register-CimIndicationEvent.md
---
external help file: Microsoft.Management.Infrastructure.CimCmdlets.dll-Help.xml
keywords: powershell,cmdlet
locale: en-us
Module Name: CimCmdlets
ms.date: 02/20/2019
online version: https://docs.microsoft.com/previous-versions/powershell/module/cimcmdlets/register-cimindicationevent?view=powershell-3.0&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Register-CimIndicationEvent
---
# Register-CimIndicationEvent

## SYNOPSIS
Subscribes to indications using a filter expression or a query expression.

## SYNTAX

### ClassNameComputerSet (Default)

```
Register-CimIndicationEvent [-Namespace <String>] [-ClassName] <String> [-OperationTimeoutSec <UInt32>]
 [-ComputerName <String>] [[-SourceIdentifier] <String>] [[-Action] <ScriptBlock>] [-MessageData <PSObject>]
 [-SupportEvent] [-Forward] [-MaxTriggerCount <Int32>] [<CommonParameters>]
```

### ClassNameSessionSet

```
Register-CimIndicationEvent [-Namespace <String>] [-ClassName] <String> [-OperationTimeoutSec <UInt32>]
 -CimSession <CimSession> [[-SourceIdentifier] <String>] [[-Action] <ScriptBlock>] [-MessageData <PSObject>]
 [-SupportEvent] [-Forward] [-MaxTriggerCount <Int32>] [<CommonParameters>]
```

### QueryExpressionSessionSet

```
Register-CimIndicationEvent [-Namespace <String>] [-Query] <String> [-QueryDialect <String>]
 [-OperationTimeoutSec <UInt32>] -CimSession <CimSession> [[-SourceIdentifier] <String>]
 [[-Action] <ScriptBlock>] [-MessageData <PSObject>] [-SupportEvent] [-Forward] [-MaxTriggerCount <Int32>]
 [<CommonParameters>]
```

### QueryExpressionComputerSet

```
Register-CimIndicationEvent [-Namespace <String>] [-Query] <String> [-QueryDialect <String>]
 [-OperationTimeoutSec <UInt32>] [-ComputerName <String>] [[-SourceIdentifier] <String>]
 [[-Action] <ScriptBlock>] [-MessageData <PSObject>] [-SupportEvent] [-Forward] [-MaxTriggerCount <Int32>]
 [<CommonParameters>]
```

## DESCRIPTION

The `Register-CimIndicationEvent` cmdlet subscribes to indications using an indication class name or
a query expression. Use the **SourceIdentifier** parameter give a name to the subscription.

This cmdlet returns an **EventSubscription** object. You can use this object to cancel the
subscription.

## EXAMPLES

### Example 1: Register the events generated by a class

This set of commands subscribes to the events generated by the class named **Win32_ProcessStartTrace**
which raises an event whenever a process starts, and gets the events with ProcessStarted
subscription using the `Get-Event` cmdlet. For more information, see [Get-Event](../Microsoft.PowerShell.Utility/Get-Event.md).

```powershell
Register-CimIndicationEvent -ClassName 'Win32_ProcessStartTrace' -SourceIdentifier "ProcessStarted"
Get-Event -SourceIdentifier "ProcessStarted"
```

> [!NOTE]
> For this example, you must run PowerShell as an Administrator.

### Example 2: Register the events using a query

This set of commands uses a query to subscribe to an event generated whenever there is a change in
the instance of a class named **Win32_LocalTime**.

```powershell
$query = "SELECT * FROM CIM_InstModification WHERE TargetInstance ISA 'Win32_LocalTime'"
Register-CimIndicationEvent -Query $query -SourceIdentifier "Timer"
```

### Example 3: Run a script when the event arrives

This set of commands shows how to use an action in response to an event. The variable `$action`
holds the script block for **Action**, which uses the `$event` variable to access the event received
from CIM.

```powershell
$action = {
  $name = $event.SourceEventArgs.NewEvent.ProcessName
  $id = $event.SourceEventArgs.NewEvent.ProcessId
  Write-Host -Object "New Process Started : Name = $name
 ID = $id"
}
Register-CimIndicationEvent -ClassName 'Win32_ProcessStartTrace' -SourceIdentifier "ProcessStarted" -Action $action
```

For more information, see [Win32_ProcessStartTrace](/previous-versions/windows/desktop/krnlprov/win32-processstarttrace).

### Example 4: Register the events on a remote computer

This set of commands subscribes to events on a remote computer named Server01. Events received from
the CIM server are stored in the event queue in the current PowerShell session and then runs a local
`Get-Event` to retrieve the events.

```powershell
Register-CimIndicationEvent -ClassName 'Win32_ProcessStartTrace' -SourceIdentifier "ProcessStarted" -ComputerName Server01
Get-Event -SourceIdentifier "ProcessStarted"
```

## PARAMETERS

### -Action

Specifies the commands that handle the events.

The commands specified by this parameter run when an event is raised, instead of sending the event
to the event queue. Enclose the commands in braces ( { } ) to create a script block.

The script block specified with **Action** can include the `$Event`, `$EventSubscriber`, `$Sender`,
`$SourceEventArgs`, and `$SourceArgs` automatic variables, which provide information about the event
to the **Action** script block. For more information, see [About Automatic Variables](../microsoft.powershell.core/about/about_automatic_variables.md).

```yaml
Type: ScriptBlock
Parameter Sets: (All)
Aliases:

Required: False
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -CimSession

Runs the command using the specified CIM session. Enter a variable that contains the CIM session, or
a command that creates or gets the CIM session, such as the `New-CimSession` or `Get-CimSession`
cmdlets. For more information, see [about_CimSessions].

```yaml
Type: CimSession
Parameter Sets: ClassNameSessionSet, QueryExpressionSessionSet
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ClassName

Specifies the indication class to which you are subscribing. You can use tab completion to browse
the list of classes, because PowerShell gets a list of classes from the local WMI server to provide
a list of class names.

```yaml
Type: String
Parameter Sets: ClassNameComputerSet, ClassNameSessionSet
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ComputerName

Specifies the name of the computer on which you want to run the CIM operation. You can specify a
fully qualified domain name (FQDN), a NetBIOS name, or an IP address.

If you specify this parameter, the cmdlet creates a temporary session to the specified computer
using the WsMan protocol. If you do not specify this parameter, the cmdlet performs operation on the
local system using Component Object Model (COM).

If multiple operations are being performed on the same computer, connect using a CIM session for
better performance.

```yaml
Type: String
Parameter Sets: ClassNameComputerSet, QueryExpressionComputerSet
Aliases: CN, ServerName

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Forward

Indicates that events for the subscription are forwarded to the session on the local computer. Use
this parameter when you are registering for events on a remote computer or in a remote session.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -MaxTriggerCount

Parameter to indicate that the subscriber should be auto-unregistered after being triggered for
specified times. If the value is equal or less than zero, there is no limit on the number of times
the event can be triggered without being unregistered.

```yaml
Type: Int32
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -MessageData

Specifies any additional data to associate with this event subscription. The value of this parameter
appears in the **MessageData** property of all the events associated with this subscription.

```yaml
Type: PSObject
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Namespace

Specifies the namespace for the CIM operation. The default namespace is **root/cimv2**. You can use
tab completion to browse the list of namespaces, because PowerShell gets a list of namespaces from
the local WMI server to provide the list of namespaces.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -OperationTimeoutSec

Specifies the amount of time that the cmdlet waits for a response from the computer. By default, the
value of this parameter is 0, which means that the cmdlet uses the default timeout value for the
server.

If the **OperationTimeoutSec** parameter is set to a value less than the robust connection retry
timeout of 3 minutes, network failures that last more than the value of the **OperationTimeoutSec**
parameter are not recoverable, because the operation on the server times out before the client can
reconnect.

```yaml
Type: UInt32
Parameter Sets: (All)
Aliases: OT

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Query

Specifies a query to run on the CIM server. If the value specified contains double quotes `"`,
single quotes `'`, or a backslash `\`, you must escape those characters by prefixing them with the
backslash character. If the value specified uses the WQL LIKE operator, then you must escape
the following characters by enclosing them in square brackets `[]`: percent `%`, underscore `_`,
or opening square bracket `[`.

```yaml
Type: String
Parameter Sets: QueryExpressionSessionSet, QueryExpressionComputerSet
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -QueryDialect

Specifies the query language used for the **Query** parameter. The acceptable values for this
parameter are: **WQL** or **CQL**. The default value is **WQL**.

```yaml
Type: String
Parameter Sets: QueryExpressionSessionSet, QueryExpressionComputerSet
Aliases:

Required: False
Position: Named
Default value: WQL
Accept pipeline input: False
Accept wildcard characters: False
```

### -SourceIdentifier

Specifies a name for the subscription. The name that you specify must be unique in the current
session. The default value is a GUID that PowerShell assigns. This value appears in the value of the
**SourceIdentifier** property of the subscriber object and of all event objects associated with this
subscription.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -SupportEvent

Indicates that the event subscription is hidden. Use this parameter when the current subscription is
part of a more complex event registration mechanism and it should not be discovered independently.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable,
-InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose,
-WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

This cmdlet accepts no input objects.

## OUTPUTS

### System.Object

This cmdlet outputs an **EventSubscription** object.

## NOTES

## RELATED LINKS

[Get-Event](../microsoft.powershell.utility/get-event.md)

[Remove-Event](../microsoft.powershell.utility/remove-event.md)

[Unregister-Event](../microsoft.powershell.utility/unregister-event.md)

[Write-Host](../microsoft.powershell.utility/write-host.md)

[Get-CimSession](Get-CimSession.md)

[New-CimSession](New-CimSession.md)
